@@ -22,6 +22,7 @@
 #include "st.h"
 #include "g72x.h"
 #include <stdlib.h>
+#include <string.h>
 
 /* Magic numbers used in Sun and NeXT audio files */
 #define SUN_MAGIC 	0x2e736e64		/* Really '.snd' */
